--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
           <compilerVersion>${java.version}</compilerVersion>
           <source>${java.version}</source>
           <target>${java.version}</target>
+          <compilerArgument>-Xlint:all</compilerArgument>
+          <showWarnings>true</showWarnings>
         </configuration>
       </plugin>
       <plugin>
